fixed: minor font size problems

--- a/Tim Ziyatdinov/res/layout/activity_login.xml
+++ b/Tim Ziyatdinov/res/layout/activity_login.xml
@@ -80,7 +80,9 @@
 	              android:gravity="center"
 	              android:text="@string/textview_first"
 	              android:textColor="@color/YellowGreen"
-	              android:textSize="@dimen/activity_horizontal_margin" />
+	              android:textSize="19sp"
+	          />
+	          <!-- @dimen/activity_horizontal_margin" -->
 	          
 	          <Button
 	              android:id="@+id/btnRegisterUser"
