Revert "fixed: minor font size problems"
This reverts commit a780bdcacb4fe7b7cea715b205f6bc713f3a324d.

--- a/Tim Ziyatdinov/res/layout/activity_results.xml
+++ b/Tim Ziyatdinov/res/layout/activity_results.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:background="@color/MyScheme1"
     android:orientation="vertical">
     
     <ScrollView
@@ -26,11 +26,8 @@
                 android:id="@+id/rTextView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="TextView"
-              />
+                android:textSize="20sp"
+                android:text="TextView" />
 
             <EditText
                 android:id="@+id/rEditText1"
@@ -38,12 +35,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
+                android:textSize="20sp"
                 android:enabled="false"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
-                android:inputType="number"
-                android:textSize="20sp"
-                android:visibility="gone" >
+                android:inputType="number" >
 
                 <!-- <requestFocus /> -->
             </EditText>
@@ -57,9 +53,8 @@
                 android:id="@+id/rTextView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView2222"
                 android:textSize="20sp"
-                android:visibility="gone" />
+                android:text="TextView2222" />
 
             <EditText
                 android:id="@+id/rEditText2"
@@ -67,12 +62,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
+                android:textSize="20sp"
                 android:enabled="false"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
-                android:inputType="number"
-                android:textSize="20sp"
-                android:visibility="gone" />
+                android:inputType="number" />
 
         </LinearLayout>
 
@@ -84,21 +78,20 @@
                 android:id="@+id/rTextView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextVi"
                 android:textSize="20sp"
-                android:visibility="gone" />
+                android:text="TextVi" />
 
           	<EditText
-          	    android:id="@+id/rEditText3"
-          	    android:layout_width="wrap_content"
-          	    android:layout_height="wrap_content"
-          	    android:layout_weight="1"
-          	    android:ems="10"
-          	    android:enabled="false"
-          	    android:focusable="false"
-          	    android:inputType="number"
-          	    android:textSize="20sp"
-          	    android:visibility="gone" >
+                android:id="@+id/rEditText3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:textSize="20sp"
+                android:focusable="false"
+                android:enabled="false"
+                android:inputType="number" >
+
              
             </EditText>
         </LinearLayout>
@@ -111,9 +104,8 @@
                 android:id="@+id/rTextView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextVi32323232323ew"
                 android:textSize="20sp"
-                android:visibility="gone" />
+                android:text="TextVi32323232323ew" />
 
             <EditText
                 android:id="@+id/rEditText4"
@@ -121,12 +113,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="false"
-                android:focusable="false"
-                android:inputType="number"
                 android:textSize="20sp"
-                android:visibility="gone" />
-
+                android:focusable="false"
+                android:enabled="false"
+                android:inputType="number" />
         </LinearLayout>
         
          <LinearLayout
@@ -137,9 +127,8 @@
                 android:id="@+id/rTextView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
                 android:textSize="20sp"
-                android:visibility="gone" />
+                android:text="TextView" />
 
             <EditText
                 android:id="@+id/rEditText5"
@@ -147,12 +136,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="false"
-                android:focusable="false"
-                android:inputType="number"
                 android:textSize="20sp"
-                android:visibility="gone" />
-
+                android:focusable="false"
+                android:enabled="false"
+                android:inputType="number" />
         </LinearLayout>
         
          <LinearLayout
@@ -163,9 +150,8 @@
                 android:id="@+id/rTextView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
                 android:textSize="20sp"
-                android:visibility="gone" />
+                android:text="TextView" />
 
             <EditText
                 android:id="@+id/rEditText6"
@@ -173,12 +159,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="false"
-                android:focusable="false"
-                android:inputType="number"
                 android:textSize="20sp"
-                android:visibility="gone" />
-
+                android:focusable="false"
+                android:enabled="false"
+                android:inputType="number" />
         </LinearLayout>
         
         
@@ -190,9 +174,8 @@
                 android:id="@+id/rTextView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
                 android:textSize="20sp"
-                android:visibility="gone" />
+                android:text="TextView" />
 
             <EditText
                 android:id="@+id/rEditText7"
@@ -200,18 +183,15 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="false"
-                android:focusable="false"
-                android:inputType="number"
                 android:textSize="20sp"
-                android:visibility="gone" />
-
+                android:focusable="false"
+                android:enabled="false"
+                android:inputType="number" />
         </LinearLayout>
         
          <LinearLayout
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:visibility="gone" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/rTextView8"
@@ -240,9 +220,8 @@
                 android:id="@+id/rTextView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
                 android:textSize="20sp"
-                android:visibility="gone" />
+                android:text="TextView" />
 
             <EditText
                 android:id="@+id/rEditText9"
@@ -250,12 +229,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="false"
-                android:focusable="false"
-                android:inputType="number"
                 android:textSize="20sp"
-                android:visibility="gone" />
-
+                android:focusable="false"
+                android:enabled="false"
+                android:inputType="number" />
         </LinearLayout>
         
         <LinearLayout
@@ -266,9 +243,8 @@
                 android:id="@+id/rTextView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
                 android:textSize="20sp"
-                android:visibility="gone" />
+                android:text="TextView" />
 
             <EditText
                 android:id="@+id/rEditText10"
@@ -276,12 +252,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:enabled="false"
-                android:focusable="false"
-                android:inputType="number"
                 android:textSize="20sp"
-                android:visibility="gone" />
-
+                android:focusable="false"
+                android:enabled="false"
+                android:inputType="number" />
         </LinearLayout>
 
         <LinearLayout
@@ -298,7 +272,7 @@
                 android:layout_gravity="bottom"
                 android:onClick="homeScreen"
                 android:text="@string/button_home_results"
-             />
+                android:textSize="20sp" />
 
         </LinearLayout>
 
